navbar collapse fix on scroll

--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -11,6 +11,9 @@ i {
 	margin-right: 10px;
 }
 /*----------bootstrap-navbar-css------------*/
+.navbar {
+	z-index: 1000;
+}
 .navbar-logo{
 	padding: 15px;
 	color: rgb(255, 165, 0);
@@ -23,6 +26,9 @@ i {
     top: 0;
     left: 0;
     width: 100%;
+}
+.default {
+	background-color: #000 !important;
 }
 #navbarSupportedContent{
 	overflow: hidden;
@@ -71,8 +77,8 @@ i {
 	transform: rotate(90deg);
 }
 
-.navbar-toggler {
-	/* padding: 10px; */
+.navbar-brand {
+	font-size: 40px;
 }
 
 /*---------css for dropdown-menus-------------*/
@@ -110,8 +116,8 @@ i {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    /* background-color: rgba(0, 0, 0, .5); */
-    background-color: transparent;
+    background-color: rgba(0, 0, 0);
+    /* background-color: transparent; */
 }
 .hori-selector .right:before{
 	bottom: 0;
